  Find forum mobiquo.php path from tapatalk.js path in html page
  Latest Threads
  Today's New Posts?
  Make a million dollars
  
 Investigated And Possibly Unfixable:
  Skip forward on remote causes XBMC dialog
 
 Awaiting Future Developments:
  Show more extra info in tapatalk (ie followers) - TTv4

Current Version : 1.5.1 RC4

*** 1.5.1 RC4 ***

Added setting 'Reverse Sort Search Results'

*** 1.5.0 RC3 ***

Added a fix for some avatar urls not being fetched by XMBC properly
Fixed a skin mod string id
Changed from splash to progress dialog when getting forum logos and made cancelable
Fix: Search user will now show [Recent Posts] and [Recent Threads] options even when there is no history
Now when adding forum from online DB and a forum is added, returns to list (again - when did I break this =] )
User '[Recent Posts]' now ignores 'Reverse Sort Posts' setting


*** 1.4.9 RC2 ***

Tapatalk: Fixed an error message bug where some errors would display as 'em'
Fixed string ids for settings with miltiple choices
Most connections now asynchronous (can be cancelled) - may default this to off by default until it's tested more
Added setting 'Disable asynchronous connections' to settings:advanced

*** 1.4.8 RC1 ***

Change to more robust method of signaling for asynchronous operations
Added a pulsing indicator when notifications causes a forums manager window refresh
Reorganized code structure
Fix bug with Category strings (ie blank categories when searching database)

*** 1.4.7 ***

Removed strings.xml
Removed polish language (Will return when transifex translation available. Was probably no longer accurate, and only about 15% complete anyway)
When Forum Browser is open and service notifies, it will now trigger Forum Browser to open the dialog instead of opening from the service. If the forums manager is open, it will be refresh instead.
Fix string IDs in tapatalk.py
Forum loading is no longer interrupted by dialogs

*** 1.4.6 ***
