@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <addon id="script.forum.browser"
        name="Forum Browser"
-       version="1.5.0"
+       version="1.5.1"
        provider-name="Rick Phillips (ruuk)">
   <requires>
     <import addon="xbmc.python" version="2.1.0"/>
